Sun May 07 05:07:23 2000  Loic Dachary  <loic@senga.org>

	* db/mkinstalldir,test/benchmark: Add for installation purpose

Sun May 07 02:17:03 2000  Loic Dachary  <loic@senga.org>

	* Makefile.am (distclean-local): Xtest instead of test 
	  that confuse some shells.

Sun May 07 02:02:46 2000  Loic Dachary  <loic@senga.org>

	* htword/WordDB.cc: Move Open to WordDB.cc.

Sun May 07 01:32:47 2000  Loic Dachary  <loic@senga.org>

	* test/t_*: check/fix scripts. All regression tests pass
	  on RedHat-6.2.

Sun May 07 00:54:30 2000  Loic Dachary  <loic@senga.org>

	* */*.cc: fix warnings and large file support inclusion
	  files on Solaris.

Sat May 06 21:55:58 2000  Loic Dachary  <loic@senga.org>

	* test: import regression tests from mifluz
	
	* htlib/DB2_db.cc (db_init): fix flags used when creating the
	  environment to include a memory pool.

	* htcommon/defaults.cc: change wordkey_description format.
	  update all wordlist_* attributes

Sat May 06 04:46:03 2000  Loic Dachary  <loic@senga.org>

	* htmerge/words.cc (mergeWords): WordSearchDescription becomes
	  WordCursor.

	* httools/htpurge.cc (purgeWords): WordSearchDescription becomes
	  WordCursor.

Sat May 06 02:01:40 2000  Loic Dachary  <loic@senga.org>

	* htdb/*: upgrade to Berkeley DB 3.0.55. Very different.

	* htlib/getcwd.c,memcmp.c,memcpy.c,memmove.c,raise.c,snprintf.c,strerror.c,vsnprintf.c,clib.h: Add compatibility support

	* htcommon/DocumentDB.cc (LoadDB): remove unused variable

	* htlib/DB2_db.cc: adapt to Berkeley DB 3.0.55 syntax.

	* htlib/Database.h (class Database): remove DB_INFO, does
	  not exist in Berkeley DB 3.0.55

	* htlib/*: run ../db/prefix-symbols.sh

	* Makefile.config (INCLUDES): fix db include dirs

	* acconfig.h: Big file support + replacement functions 

	* acinclude.m4,configure.in : db instead of db/dist + bug fixes

Fri May  5 08:33:59 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* db/*: Merge in changes from Loic's mifluz tree. This will break