@@ -86,6 +86,7 @@ url_LDADD = $(HTLIBS)
 clean-local:
 	rm -fr gmon.out test test_weakcmpr __db*
 	rm -f  tmpfile t_htdb.d? monitor.out 
+	$(MAKE) -C conf clean
 
 distclean-local:
 	rm -fr words.all words.uniq
